--- a/pirate.html
+++ b/pirate.html
@@ -25,7 +25,7 @@
             <div style="color: lightcoral;">Click for help</div>
             <div style="color: lightcoral;" id="help">Help report</div></br>
         <div class="container">
-            <div class="image-container row">
+            <div class="container row">
                 <div class="treasureloc">
                    <img src="treasureloc.jpg" height="100px" width="100px" alt="locimg">
              </div>
@@ -42,7 +42,7 @@
                      <img src="treasureloc.jpg" height="100px" width="100px" alt="locimg">
                 </div>
          </div>
-         <div class="image-container row">
+         <div class="container row">
             <div class="treasureloc">
                <img src="treasureloc.jpg" height="100px" width="100px" alt="locimg">
          </div>
@@ -59,7 +59,7 @@
                  <img src="treasureloc.jpg" height="100px" width="100px" alt="locimg">
             </div>
      </div>
-     <div class="image-container row">
+     <div class="container row">
         <div class="treasureloc">
            <img src="treasureloc.jpg" height="100px" width="100px" alt="locimg">
      </div>
@@ -76,7 +76,7 @@
              <img src="treasureloc.jpg" height="100px" width="100px" alt="locimg">
         </div>
  </div>
- <div class="image-container row">
+ <div class="container row">
     <div class="treasureloc">
        <img src="treasureloc.jpg" height="100px" width="100px" alt="locimg">
  </div>
@@ -93,7 +93,7 @@
          <img src="treasureloc.jpg" height="100px" width="100px" alt="locimg">
     </div>
 </div>
-<div class="image-container row">
+<div class="container row">
     <div class="treasureloc">
        <img src="treasureloc.jpg" height="100px" width="100px" alt="locimg">
  </div>
