--- a/react.html
+++ b/react.html
@@ -15,7 +15,7 @@
 
   <div id="target">Your time</div>
   <div id="counter">Count</div></br>
-  <button type="button" class="btn btn-warning" >Start Timer</button>
+  <button type="button" class="btn btn-warning" onclick="startTime()">Start Timer</button>
   <button type="button" class="btn btn-warning" onclick="recordTime()">React</button>
     
   <script>
@@ -24,7 +24,24 @@
     reactTime=Date.now()
     console.log("react time : "+reactTime)
   }
-
+  
+  function startTime() {
+    for(let i=0;i<9;i++){
+    setTimeout(()=>{
+      document.getElementById("counter").innerHTML = i
+    }, (8-i)*1000)
+  }
+  setTimeout(()=>{
+    if(reactTime==undefined){
+        document.getElementById("target").innerHTML="Too Slow"
+    }
+    else{
+        let endTime=Date.now()
+        let timeDiffernce=Math.abs(endTime-reactTime)
+        document.getElementById("target").innerHTML="Time was "+timeDiffernce+" milliseconds"
+    }
+    }, 8000)
+}
   
   </script>
 
