--- a/merger.html
+++ b/merger.html
@@ -34,6 +34,8 @@
 	     <p> Press the button to create an new element of type div and then add it to the container.
 		</p>
 		<button onclick="makeNewDiv()">Add end</button>
+		<button onclick="addFront()">Add front</button>
+		<button onclick="remove()">Remove</button>
         
 
 	
@@ -51,5 +53,20 @@
 		container.appendChild(element)
 		
 	}
+	function remove(){
+        let mergerItems=document.getElementsByClassName("merger")
+        if(mergerItems.length>0){
+            mergerItems[Math.floor(mergerItems.length/2)].remove()
+        }
+
+    }
+    function addFront(){
+        let element = document.createElement("div")
+		element.innerHTML = document.getElementById("id1").value
+		element.className="merger"
+
+		let container = document.getElementById('target')
+		container.insertBefore(element, container.firstChild)
+    }
 </script>
 </html>
