--- a/react.html
+++ b/react.html
@@ -26,10 +26,11 @@
   }
   
   function startTime() {
-    for(let i=0;i<9;i++){
+    let starting=Math.floor(Math.random() * 9) + 2;
+    for(let i=0;i<starting+1;i++){
     setTimeout(()=>{
       document.getElementById("counter").innerHTML = i
-    }, (8-i)*1000)
+    }, (starting-i)*1000)
   }
   setTimeout(()=>{
     if(reactTime==undefined){
